--- a/docs/lecture02_markdown.Rmd
+++ b/docs/lecture02_markdown.Rmd
@@ -2,7 +2,7 @@
 title: "Programming Tools in Data Science"
 subtitle: "Lecture #2: RMarkdown"
 author: "Samuel Orso"
-date: "20 September 2022"
+date: "28 September 2023"
 output:
   xaringan::moon_reader:
     css: ["default", "assets/sydney-fonts.css", "assets/sydney.css"]
@@ -130,10 +130,11 @@ class: sydney-blue, center, middle
 knitr::include_graphics("images/qrcode_data-analytics-lab.shinyapps.io.png")
 ```
 
----
+<!---
 ```{r echo=FALSE, fig.align='center'}
 knitr::include_url("https://data-analytics-lab.shinyapps.io/rmarkdown/")
 ```
+-->
 
 ---
 # Printing an output as a table with `knitr::kable()`
@@ -178,6 +179,15 @@ knitr::include_graphics("images/gif_inf_m_r.gif")
 ```
 
 ---
+# From RMarkdown to Quarto
+<img src="images/quarto.png" style="width:250px; position:absolute; top:9%; left:55%" /> 
+- Similar to RMarkdown, it can render docs that contain code in R, Python, Julia,... 
+- It combines functionalities of RMarkdown and other packages into a **single system**, very useful to collaborate people who write in a different programming language from you (and do not necessarily have R/R Studio).
+
+> Like R Markdown, Quarto uses Knitr to execute R code, and is therefore able to render most existing Rmd files without modification.
+> <cite>quarto.org/</cite>
+
+---
 class: sydney-blue, center, middle
 
 # Question ?
@@ -195,15 +205,18 @@ class: sydney-blue, center, middle
 ---
 # In-class exercise (10 minutes)
 1. Create a RMarkdown HTML document in `RStudio` and "`knit`" it.
-1. Change the output format to `github_document`.
 1. Create a new header of type 2.
 1. Make a linear regression with "Sepal Length" as a response and 
-"Sepal Width" as an explanatory variable from the `iris` dataset and save the result. Highlight the code with `monochrome` style.
+"Sepal Width" as an explanatory variable from the `iris` dataset and save the result. 
+1. Highlight the code with `monochrome` style.
 1. Print the summary of the linear regression.
 1. Include the QQplot from the linear regression. Change to filled dots.
 1. Print the head of the `iris` dataset with `kable`.
-1. Remove the `.` from the lables (click [here](https://bookdown.org/yihui/rmarkdown-cookbook/kable.html#change-column-names))
+1. Remove the `.` from the labels (click [here](https://bookdown.org/yihui/rmarkdown-cookbook/kable.html#change-column-names))
 1. Install `kableExtra`. And perform the examples shown in the slides with `iris` dataset.
+1. Using Mathpix, reproduce equation (6.1) of the paper [https://arxiv.org/abs/math/0303109](https://arxiv.org/abs/math/0303109)
+1. Add the Reference and cite it in the RMarkdown.
+1. Try to make it into a Quarto document.
 
 ---
 # To go further
