--- a/docs/lecture05_controlstructure.Rmd
+++ b/docs/lecture05_controlstructure.Rmd
@@ -428,7 +428,7 @@ The bootstrap is a well-known method in statistics since Efron's seminal paper i
 5.  Compute the unbiased estimator of the variance: $$\frac{1}{B-1}\sum_{b=1}(\hat{\theta}^\ast_{b}-\hat{\theta})^2.$$
 
 ---
-# In-class exercise (10 minutes)
+# Exercise
 1. Load a dataset using `data("ToothGrowth")`. Create 
 two vectors of tooth lengths corresponding to
 `OJ` and `VC` factors respectively. Compute the
@@ -438,8 +438,3 @@ using $B=10,000$ and a for loop. Checkout
 the `sample` function for sampling at random with replacement.
 3. Using `ggplot2`, make a graph of the bootstrap
 distributions by plotting two histograms on the same plot. 
-
----
-# For more exercises
-Try to solve the exercises [here](https://intro-to-ds.netlify.app/chapter2),
-especially the 4th one.
