--- a/docs/lecture06_function.Rmd
+++ b/docs/lecture06_function.Rmd
@@ -212,7 +212,10 @@ my_div <- function (numerator, denominator) {
   return(div)
 }
 my_div(A, B)
+```
 
+---
+```{r}
 A <- matrix(1:9,ncol=3)
 B <- matrix(10:18,ncol=3)
 my_div(A, B)
@@ -325,6 +328,15 @@ my_div(A, B)
 # Lexical scoping
 Lexical scoping consists in how to find a value associated with a name. What do you think will be the output of the following command?
 ```{r,eval=F}
+new_num <- 1
+new_den <- 2
+my_div(A, B)
+```
+
+---
+# Lexical scoping
+Lexical scoping consists in how to find a value associated with a name. What do you think will be the output of the following command?
+```{r,eval=T}
 new_num <- 1
 new_den <- 2
 my_div(A, B)
